<resources>
    <string name="app_name">News App</string>
    <string name="click_to_view_news_headlines">Click to view news headlines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_by_category">Sort by Category</string>
    <string name="sort_order_latest_first">Latest -> Oldest</string>
    <string name="sort_order_oldest_first">Oldest -> Latest</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="default_">Default</string>

</resources>